# component-templates

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  component.manifest.json
.codex/: repo_overview.md
.github/workflows/: ci.yml
ci/: component_pack_smoke.sh  local_check.sh
schemas/: component.schema.json
schemas/io/: input.schema.json  output.schema.json
src/: lib.rs
tests/: conformance.rs
wit/: package.wit
