[package]
name = "component-templates"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.89"
description = "Greentic component component-templates"
repository = "https://github.com/component-templates"
authors = ["maarten"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
handlebars = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
greentic-types = { version = "0.4" }

[dev-dependencies]
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["component-node"] }
