[package]
name = "component-templates"
version = "0.1.10"
edition = "2024"
license = "MIT"
rust-version = "1.90"
description = "Greentic component component-templates"
repository = "https://github.com/component-templates"
authors = ["maarten"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
path = "wit"
world = "component-v0-v6-v0"

[dependencies]
handlebars = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
greentic-types = { version = "0.4.49" }
ciborium = "0.2"
wit-bindgen = "0.53"

[dev-dependencies]
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
greentic-interfaces-guest = { version = "0.4.93", default-features = false, features = ["component-v0-6"] }
